2013-07-14  Ryosuke Niwa  <rniwa@webkit.org>

        HTMLTextFormControlElement::valueWithHardLineBreaks shouldn't upconvert 8-bit string
        https://bugs.webkit.org/show_bug.cgi?id=118631

        Reviewed by Andreas Kling.

        Merge https://chromium.googlesource.com/chromium/blink/+/2c7c70a7bd3d61bfbf97de95c459ec9f40b46e31.

        * html/HTMLTextFormControlElement.cpp:
        (WebCore::HTMLTextFormControlElement::valueWithHardLineBreaks):

2013-07-14  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Add toSVGFilterElement() and use it.
        https://bugs.webkit.org/show_bug.cgi?id=118653

        Reviewed by Ryosuke Niwa.

        We can use toSVGFilterElement() instead of using static_cast<..> to improve readability.
        Blink also uses it.

        No new tests, no behavior change.

        * rendering/svg/RenderSVGResourceFilter.cpp:
        (WebCore::RenderSVGResourceFilter::buildPrimitives):
        (WebCore::RenderSVGResourceFilter::applyResource):
        (WebCore::RenderSVGResourceFilter::resourceBoundingBox):
        * rendering/svg/RenderSVGResourceFilter.h:
        (WebCore::RenderSVGResourceFilter::filterUnits):
        (WebCore::RenderSVGResourceFilter::primitiveUnits):
        * rendering/svg/SVGResources.cpp:
        (WebCore::targetReferenceFromResource):
        * svg/SVGFilterElement.h:
        (WebCore::toSVGFilterElement):

2013-07-14  Kangil Han  <kangil.han@samsung.com>

        Introduce toHTMLVideoElement
        https://bugs.webkit.org/show_bug.cgi?id=118582

        Reviewed by Ryosuke Niwa.

        To avoid direct use of static_cast, this patch introduces toHTMLVideoElement.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::getPluginProxyParams):
        * html/HTMLVideoElement.h:
        (WebCore::toHTMLVideoElement):
        * html/MediaDocument.cpp:
        (WebCore::MediaDocumentParser::createDocumentStructure):
        (WebCore::descendentVideoElement):