@@ -1,5 +1,17 @@
 2013-07-14  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Modernize QualifiedName by wrapping gNameCache in a function and using more early exits
+        https://bugs.webkit.org/show_bug.cgi?id=118299
+
+        Reviewed by Andreas Kling.
+
+        Address Ben's review comment.
+
+        * dom/QualifiedName.cpp:
+        (WebCore::QualifiedName::toString):
+
+2013-07-14  Ryosuke Niwa  <rniwa@webkit.org>
+
         HTMLTextFormControlElement::valueWithHardLineBreaks shouldn't upconvert 8-bit string
         https://bugs.webkit.org/show_bug.cgi?id=118631
 
